--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,9 @@ body {
     background-color: #fff;
     overflow-x: hidden;
 }
-
+.alert-text {
+        color: #e63946;
+}
 .container {
     width: 80%;
     margin: 0 auto;
@@ -62,7 +64,7 @@ body {
 }
 
 
-.about, .course, .contact {
+.about, .course, .contact , .testimonials {
     padding: 60px 20px;
     background-color: #ebeaeaa4;
     border-radius: 8px;
@@ -88,7 +90,7 @@ body {
     }
     .hero h1 {
         font-size: 2em;
-        margin-top: 200px;
+        margin-top: 400px;
         color: #e63946; /* Красный */
         margin-bottom: 20px;
         animation: fadeIn 1s ease-out;
@@ -143,6 +145,56 @@ ul li {
     font-size: 1.1em;
     text-align: center;
 }
+section {
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+    background-color: #f9f9f9; /* Светлый фон */
+}
+
+.buttons {
+    display: flex;
+    gap: 20px; /* Расстояние между кнопками */
+}
+
+.buttons button {
+    background-color: #003d5b; /* Темно-синий */
+    color: white;
+    padding: 15px 30px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.buttons button:hover {
+    background-color: #005c85; /* Светлее при наведении */
+}
+
+.buttons a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+
+.buttons button:active {
+    transform: scale(0.95); /* Легкая анимация при нажатии */
+}
+
+/* Мобильная версия */
+@media (max-width: 768px) {
+    .buttons {
+        flex-direction: column;
+        gap: 15px; /* Уменьшенное расстояние между кнопками */
+    }
+
+    .buttons button {
+        width: 100%;
+        text-align: center;
+    }
+}
+
 
 .button:hover {
     background-color: #2d6a4f;
