--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ body {
 .container h2 {
     text-align: center;
 }
+.container img{
+
+    
+}
 .hero {
     position: relative;
     height: 100vh;
@@ -38,7 +42,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Полупрозрачный черный наложенный слой */
+
     z-index: 1;
 }
 
@@ -58,7 +62,7 @@ body {
 
 .hero p {
     font-size: 1.5em;
-    color: #fff;
+    color: #11144d;
     margin-bottom: 10px;
     animation: fadeIn 2s ease-out;
 }
@@ -98,7 +102,7 @@ body {
     
     .hero p {
         font-size: 1em;
-        color: #fff;
+        color: #11144d;
         margin-bottom: 10px;
         animation: fadeIn 2s ease-out;
     }
@@ -398,7 +402,6 @@ center; color: #003d5b; /* Темно-синий */ }
 
 
 
-.hero-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); }
 
 .hero-content { position: relative; z-index: 1; }
 
@@ -423,7 +426,6 @@ center; color: #003d5b; /* Темно-синий */ }
 
 .course-block { 
     margin-bottom: 30px; 
-
 }
 @media (max-width: 768px) {
 
@@ -460,6 +462,7 @@ center; color: #003d5b; /* Темно-синий */ }
     padding: 20px;
     box-sizing: border-box;
     text-align: center;
+    background-color: white;
 }
 
 .carousel-item p, .carousel-item ul {
